Фикс состояний ссылок

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
           <h2 class="extras__title">Вашему бизнесу нужен витамин роста</h2>
           <ul class="extras__list">
             <li class="extras__list-item extra-item">
-              <div class="extra-item__wrapper">
+              <a href="https://goldcarrot.ru/" class="extra-item__link">
                 <img src="img/extra__item_1.jpg" width="400" height="260" alt="Иллюстрация Дизайн и брендинг" class="extra-item__image">
                 <h4 class="extra-item__title">Дизайн и брендинг</h4>
-              </div>
+              </a>
             </li>
             <li class="extras__list-item extra-item">
-              <div class="extra-item__wrapper">
+              <a href="https://goldcarrot.ru/" class="extra-item__link">
                 <img src="img/extra__item_2.jpg" width="400" height="260" alt="Иллюстрация Разработка веб-сервисов" class="extra-item__image">
                 <h4 class="extra-item__title">Разработка веб-сервисов</h4>
-              </div>
+              </a>
             </li>
             <li class="extras__list-item extra-item">
-              <div class="extra-item__wrapper">
+              <a href="https://goldcarrot.ru/" class="extra-item__link">
                 <img src="img/extra__item_3.jpg" width="400" height="260" alt="Иллюстрация Реклама и продвижение" class="extra-item__image">
                 <h4 class="extra-item__title">Реклама и продвижение</h4>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
