--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div class="extras">
         <div class="extras__wrapper wrapper">
-          <h2 class="extras__title">Вашему бизнесу нужен витамин роста</h2>
+          <h2 class="extras__title">Вашему бизнесу нужен витамин <span class="extras__title-decor">роста</span></h2>
           <ul class="extras__list">
             <li class="extras__list-item extra-item">
               <a href="https://goldcarrot.ru/" class="extra-item__link">
