Добавлен показ попапа

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="promo">
         <div class="promo__wrapper wrapper">
           <h1 class="promo__title visually-hidden">Карточка - это удобный сервис для формирования карточек предприятий вашего бизнеса.</h1>
-          <p class="promo__desc">Карточка - это удобный сервис для формирования карточек предприятий вашего бизнеса. <a href="" class="promo__desc-link">Посмотрите</a>, какая карточка вышла у нас!</p>
+          <p class="promo__desc">Карточка - это удобный сервис для формирования карточек предприятий вашего бизнеса. <span class="subscribe__link subscribe__link js-popup-open">Посмотрите</span>, какая карточка вышла у нас!</p>
           <div class="promo__app app">
             <h2 class="app__title">Чтобы начать, выберите форму бизнеса</h2>
             <div class="app__button-wrapper">
@@ -57,7 +57,7 @@
               </li>
             </ul>
             <div class="tools__subscribe subscribe">
-              <p class="subscribe__desc">Попробуйте <a class="subscribe__link">подписаться</a>,<br> так вы узнаете о новых инструментах</p>
+              <p class="subscribe__desc">Попробуйте <span class="subscribe__link js-popup-open">подписаться</span>,<br> так вы узнаете о новых инструментах</p>
             </div>
           </div>
         </div>
@@ -123,6 +123,6 @@
         </div>
       </div>
     </footer>
-
+    <script src="js/main.js"></script>
   </body>
 </html>
